--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.1
-  - 2.2
-  - 2.3
-  - 2.4.0
-before_install: gem install bundler -v 1.14.6
+  - ruby-2.1.10
+  - ruby-2.2.7
+  - ruby-2.3.4
+  - ruby-2.4.1
+  - jruby-9.1.5.0
+before_install: gem install bundler -v 1.15.4
