--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,35 @@
-sudo: false
+env:
+  global:
+    - JRUBY_OPTS="-Xcli.debug=true --debug"
+    - CC_TEST_REPORTER_ID=b78cb927bf15a7aee5aacd4486215628550f784e77d137a2da8c96c417a068ff
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+script:
+  - bundle exec rspec
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+before_install:
+  - gem update --system
+  - gem install bundler
+
+install:
+  - bundle install
+
+bundler_args: --no-deployment --jobs 3 --retry 3
+
+cache: bundler
+
 language: ruby
+sudo: false
+
 rvm:
-  - ruby-2.3.4
-  - ruby-2.4.2
+  - ruby-2.3.7
+  - ruby-2.4.4
+  - ruby-2.5.1
   - jruby-9.1.9.0
-before_install: gem install bundler -v 1.15.4
