--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,13 @@
+inherit_from: .rubocop_todo.yml
+
+#inherit_from: .rubocop_todo.yml
+
+require:
+  - 'rubocop-md'
+  - 'rubocop-performance'
+  - 'rubocop-rake'
+  - 'rubocop-rspec'
+
 AllCops:
   NewCops: enable
 
