--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -9,9 +9,15 @@ name: Ruby
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - 'main'
+    tags:
+      - '!*' # Do not execute on tags
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - '*'
+  # Allow manually triggering the workflow.
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -22,6 +28,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        rubygems:
+          - latest
+        bundler:
+          - latest
         ruby-version: ['2.6', '2.7', '3.0', '3.1', '3.2']
 
     steps:
