--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,7 +32,7 @@ jobs:
           - latest
         bundler:
           - latest
-        ruby-version: ['2.6', '2.7', '3.0', '3.1', '3.2']
+        ruby-version: ['2.7']
 
     steps:
     - uses: actions/checkout@v3
