🔧 Ignore some RuboCop rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,9 @@
 inherit_gem:
   rubocop-lts: config/rubygem_rspec.yml
+
+RSpec/ExampleLength:
+  Enabled: false
+RSpec/MultipleExpectations:
+  Enabled: false
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
