--- a/.github/workflows/heads.yml
+++ b/.github/workflows/heads.yml
@@ -1,4 +1,4 @@
-name: Ruby Current Matrix
+name: Ruby Heads Matrix
 
 env:
   K_SOUP_COV_DO: false
@@ -40,11 +40,9 @@ jobs:
         gemfile:
           - vanilla
         ruby:
-          #- '3.1' - 3.1 tests are run by coverage.yml
-          - '3.2'
-          - '3.3'
-          - jruby
-          - truffleruby
+          - head
+          - jruby-head
+          - truffleruby-head
 
     steps:
       - name: Checkout
