📝 Fix documentation on last hash config

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -18,7 +18,7 @@ jobs:
   rubocop:
     name: RuboCop
     strategy:
-      fail-fast: false
+      fail-fast: falsebest
       matrix:
         experimental: [true]
         rubygems:
