🎨 Disambiguated class method log output call separator
- `.` => `::`, because `.` is ambiguous; same call syntax used for instance method calls

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -18,7 +18,7 @@ jobs:
   rubocop:
     name: RuboCop
     strategy:
-      fail-fast: falsebest
+      fail-fast: false
       matrix:
         experimental: [true]
         rubygems:
