--- a/.github/workflows/heads.yml
+++ b/.github/workflows/heads.yml
@@ -32,6 +32,7 @@ jobs:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: true
       matrix:
         rubygems:
           - latest
