🧑‍💻 Better direnv setup

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,6 @@
+# Run any command in this library's bin/ without the bin/ prefix!
+PATH_add bin
+
 ### External Testing Controls
 export K_SOUP_COV_DO=true # Means you want code coverage
 export K_SOUP_COV_MIN_BRANCH=21 # Means you want to enforce X% branch coverage
@@ -7,3 +10,6 @@ export K_SOUP_COV_MIN_HARD=true # Means you want the build to fail if the covera
 export K_SOUP_COV_MULTI_FORMATTERS="html,tty" # What coverage output formats do you want?
 export MAX_ROWS=5 # Setting for simplecov-console gem for tty output, limits to the worst N rows of bad coverage
 export DEBUG=true # Enable to load byebug
+
+# .env.local will override anything in this file, and is git-ignored.
+dotenv_if_exists .env.local
